# bilibili-Huawei-Apple-comments-analysis

./: README.md  apple_analyze.py  huawei_analyze.py  qingxi.py
commentsClassification/: commentClassification.py  model_test.py
data_mining_and_visualization/: README.md  comments.py  confusion.py  pyproject.toml  visualization.py
