[project]
name = "data-mining-report"
version = "0.1.0"
description = "Bilibili comments sentiment analysis for Huawei and Apple phones"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "fake-useragent>=1.4.0",
    "certifi>=2025.6.15",
    "urllib3>=2.4.0",
    "brotli>=1.1.0",
    "jieba",
    "matplotlib>=3.8.0",
    "seaborn>=0.12.2",
    "wordcloud"
]
